stylesheets/style.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0b2 | 201101
   NOTE: THIS IS A BETA VERSION (see previous line)
   USE WITH CAUTION AND TEST WITH ABANDON */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* END MEYER RESET */

.hide {
	width:1px;
	height:1px;
	position:absolute;
	text-indent:-9999px;
	overflow:hidden;
}

.clearfix {
	&:after {
		visibility:hidden;
		display:block;
		font-size:0;
		content:" ";
		clear:both;
		height:0;
	}
	* html & { zoom:1; }
	*:first-child+html { zoom:1; }
}

body {
	font-size:16px;
	line-height:1.5;
	color:#444;
	background:#f5f5ff;
	font-family:"Helvetica Neue", Arial, Helvetica, sans-serif;
}

section:before, .group:before, section:after, .group:after {content:""; display:table;}
section:after, .group:after {clear:both;}

h1 {
	font-size:24px;
	font-weight:bold;
	margin-top:24px;
}

hgroup {
	margin-bottom:24px;
}

hgroup h1 {
	color:#222;
	font-size:28px;
}

hgroup h2 {
	font-size:24px;
	color:#666;
}

p {
	margin:8px 0 24px 0;
}

article {
	padding:16px 0;
	border-top:1px solid #ddd;
}

#wrapper {
	width:860px;
	margin:0 auto;
	padding-bottom: 80px;
}

#main-nav-holder {
height: 30px;
z-index: 5;
}

#main-nav ul {
	width:900px;
	margin-left:-20px;
  padding-top: 2px;
	height:25px;
	text-align:center;
	font-size:14px;
	background:#333;
	color:#ddd;
}

#main-nav li {
	display:inline-block;
	border-left:1px solid #555;
	width: 90px;
	height: 20px;
	vertical-align: bottom;
}

#main-nav li:first-child {
	border-left:0;
}

#main-nav li a {color:#ddd; text-decoration: none;}
#main-nav li a:hover {color:#9f0000;}
#main-nav li .active-nav {color: #9f0000;}

.sticky #main-nav {
	position:fixed;
	top:0;
	left:0;
	width:100%;
	z-index: 5;
}

.sticky #main-nav ul {
	margin:0 auto;
}

section {padding: 60px 0px 0px;}

footer nav li {list-style-type: none;}

.top, .down {
	position:fixed;
	z-index: 2;
	right:70px;
	bottom:15px;
	width:50px;
	height:25px;
	padding-top:25px;
	line-height:25px;
	background:#333;
	color:#888;
	display:block;
	text-transform:uppercase;
	text-decoration:none;
	text-align:center;
	font-size:14px;
	-webkit-border-radius:10px;
	-moz-border-radius:10px;
	border-radius:10px;
	behavior:url(../PIE.htc);
}

.down {right:15px;}

.top:before, .down:before {
	position:absolute;
	top:11px;
	left:14px;
	content:"";
	border-left:11px solid transparent;
	border-right:11px solid transparent;
}

.top:before {border-bottom:11px solid #888;}
.down:before {border-top:11px solid #888;}

.top:hover, .down:hover { color:#eee; cursor: pointer;}
.top:hover:before, .down:hover:before {border-bottom-color:#eee; border-top-color:#eee;}

.opacity .top { opacity:1; -webkit-transition:opacity 700ms linear; -moz-transition:opacity 700ms linear; transition:opacity 700ms linear;}
.opacity .top.hidden { opacity:0; }
.no-opacity .top.hidden { display:none;}

section h1 {margin: 40px 0px 20px;}

.squares {z-index: -2; min-height: 140px;}
.squares div {float: left; height: 140px; line-height:140px; width: 140px; font-size: 100px; position: relative;
  overflow: hidden; text-align: center; vertical-align: center; color: #ddd; z-index: 1;}
.squares div img {float: left; position: absolute; top: -50px; left: -50px; z-index: -2; height: 250px; text-align: left; }
.squares div:hover {overflow: visible; z-index: 2; font-size: 0px;}
.squares div img:hover {height: 250px; top: -50px; left: -50px;}

#code .squares, #work .squares {min-height: 172px;}
#code .squares a, #work .squares a {clear: both; display: block; padding: 5px; text-decoration: none; color: #9F0000;}
#code .squares a:hover, #work .squares a:hover {opacity: 0.5;}
#code .squares div img, #work .squares div img {left: -33px;}
#code .squares div img:hover, #work .squares div img:hover {left: -33px;}
#code .squares div, #work .squares div {width: 172px; height: 172px;}

#code .squares div {border: 5px solid grey; margin: 5px; }
#code h2 {background:#EEE; color: green; font-size: 20px; line-height: 22px; margin-top: 50px;}
#code .squares div:hover h2 {display: none;}

.squares .caption {font-size: 15px; display: none; width: 246px; margin: 200px 0 0 -33px; line-height: 16px; background: #ddd; color: #333; padding: 10px;}
.squares div:hover p {display: block;}

#work .text-square, #work .text-square:hover p {background: #abcdef;}
#haiti .text-square, #haiti .text-square:hover p {background: #009a00;}
#peaks .text-square, #peaks .text-square:hover p {background: #0000f9;}
#bikes .text-square, #bikes .text-square:hover p {background: #000f90;}

.squares .text-square p, .squares .text-square img {height: 250px; width: 250px; top: -50px; left: -50px; line-height: 14px; font-size: 13px;
  display: none; position: absolute; margin: 0px; padding: 10px; opacity: .3;}
.squares .text-square:hover p, .squares .text-square:hover img {display: block; opacity: 1;}
#code .text-square p, #work .text-square p {left: -50px; top: -50px; height: 250px; width: 266px; color: #fff; font-size: 20px; line-height: 24px;}

#game h2 {
  margin: 40px 0px 20px;
  font-size: 20px;
  font-weight: bold;
  color: #444;
}
/* ... */

